[package]
name = "async_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-std = { version = "1.12.0", features = ["attributes"] }
bimap = "0.6.3"

daggy = "0.8.0"
derivative = "2.2.0"
fixedbitset = "0.4.2"
futures = "0.3.28"
rustsat = { version = "0.2.1", features = ["multiopt"] }
rustsat-minisat = "0.1.1"
scuttle = { version = "0.2.0", default-features = false }
thiserror = "1.0.48"

[dev-dependencies]
dashmap = "5.5.3"



